Updated new pages for each activity

--- a/index.html
+++ b/index.html
@@ -46,31 +46,38 @@
   <!-- How the team fits together Section -->
   <div class="w3-container w3-padding-32 max-width">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 textcenter">About SoCS Showcase 2020</h3>
-    <p>This reading week you will be stuck for things not to do rather than for things to do! With the great diversity of students across the SoCS we have decided to bring all of that together and hold the first SoCS Showcase event, designed by students and presented by students. We will be holding a full series of 'show and tell' style presentations as well as following that up with a full series of seminars, designed to remove any fear you have form those useful but initially scary tools that will become a mainstay of your careers! We then have the first memejam with the theme to be announced shortly!
+    <p>This Enhancement Week you will be stuck for things not to do rather than for things to do! With the great diversity of students across the SoCS we have decided to bring all of that together and hold the first SoCS Showcase event, designed by students and presented by students. We will be holding a full series of 'show and tell' style presentations as well as following that up with a full series of seminars. We then have the first SoCS memejam, so don't be afraid to show us what you can do! For information about any of the activities please follow the links below or contact us through our community links! We look forward to seeing you at our events!
     </p>
   </div>
 
 
   <div class="w3-row-padding max-width" style="text-align: center;">
 
-    <div class="w3-col l4 m6 w3-margin-bottom" style="line-height:1.5;">
-      <img src="assets/showandtell.gif" class="center" id="student" style="width:350px; height: 350px;">
-          <p><b>Date: TBC</b></p>
-          <p><b>09:00 Start</b></p>
-      <a href="" class="w3-button email-button w3-blue w3-block"><b>Showcase</b></a>
+
+    <div class="w3-col l6 m6 w3-margin-bottom" style="line-height:1.5;">
+      <img src="assets/showandtell.png" class="center" id="student" style="width:350px; height: 350px;">
+      <p><b>Thursday 12th November 2020</b></p>
+       <p><b>11:30 AM</b></p>
+      <a href="showcase.html" class="w3-button email-button w3-blue w3-block"><b>SoCS Showcase</b></a>
     </div>
-    <div class="w3-col l4 m6 w3-margin-bottom" style="line-height:1.5;">
-      <img src="assets/seminar.gif" class="center" id="student" style="width:350px; height: 350px;">
-      <p><b>Date: TBC</b></p>    
-      <p><b>13:00 Start</b></p>
-      <a href="" class="w3-button email-button w3-blue w3-block"><b>Seminars</b></a>
+
+    
+    <div class="w3-col l6 m6 w3-margin-bottom" style="line-height:1.5;">
+      <img src="assets/memejam.jpg" class="center" id="student" style="width:350px; height: 350px;">
+      <p><b>Wednesday 11th November 2020</b></p>
+      <p><b>4:30 PM</b></p>
+      <a href="memejam.html" class="w3-button email-button w3-blue w3-block"><b>MemeJam (24 hours)</b></a>
     </div>
+
+
+<!--
     <div class="w3-col l4 m6 w3-margin-bottom" style="line-height:1.5;">
-      <img src="assets/memejam.gif" class="center" id="student" style="width:350px; height: 350px;">
-      <p><b>Date: TBC</b></p>
-      <p><b>09:00 Start</b></p>
-      <a href="" class="w3-button email-button w3-blue w3-block"><b>MemeJam (24 hours)</b></a>
+      <img src="assets/Twitch.png" class="center" id="student" style="width:350px; height: 350px;">
+      <p><b>Thursday 12th November 2020</b></p>
+      <p><b>6:00 PM</b></p>
+      <a href="TwitchStream.html" class="w3-button email-button w3-blue w3-block"><b>Q&A With Chris & Friends</b></a>
     </div>
+-->
 
   </div>
 
@@ -84,7 +91,7 @@
   <!-- How the team fits together Section -->
   <div class="w3-container w3-padding-32 max-width" id="help">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 textcenter">Help & Support</h3>
-    <p>We look forward to releasing more information over the next week, but in the meantime, if you have any questions, please contact us on any of the links below, <a href="#" class="hasTooltip">Discord is a great </a><span>If the Discord link is broken please let us know. They can sometimes expire!</span>, as well as MS Teams. We will get straight back to you! No question is off limits so feel free to ask anything!
+    <p>We are always here to help! So if you have any questions at all, please contact us on any of the links below, <a href="#" class="hasTooltip">Discord is a great </a><span>If the Discord link is broken please let us know. They can sometimes expire!</span>, as well as MS Teams. We will get straight back to you! No question is off limits so feel free to ask anything!
     </p>
 
   </div>
