Change the wording of my talk description

--- a/showcase.html
+++ b/showcase.html
@@ -90,7 +90,7 @@
     <div class="contentBox">
       <h2>13:00 - 13:30</h2>
       <h2>CascadeBot Walkthrough</h2>
-      <p><b>William Oldham (Y2)</b> takes us through CascadeBot, a open source project led by William that has everything you need to manage and moderate your Discord server.</p>
+      <p><b>William Oldham (Y2)</b> takes us through CascadeBot, a open source Discord bot project that has everything you need to manage and moderate your Discord server.</p>
     </div>
   </div>
   <div class="container right">
