Update joe pitts description

--- a/showcase.html
+++ b/showcase.html
@@ -111,7 +111,7 @@
     <div class="contentBox">
       <h2>15:00 - 15:30</h2>
       <h2>IoT Walkthrough</h2>
-      <p><b>Joseph Pitts (Y3)</b> take us on a tour of developing cool IoT applications using C++ and the MxChip.</p>
+      <p><b>Joseph Pitts (Y3)</b> take us on a tour of developing cool IoT applications using C++, the cloud and the MxChip.</p>
     </div>
   </div>
     <div class="container left">
