--- a/showcase.html
+++ b/showcase.html
@@ -123,6 +123,13 @@
   </div>
   <div class="container right">
     <div class="contentBox">
+      <h2>16:00 - 16:30</h2>
+      <h2>URVOS Showcase</h2>
+      <p><b>Harry Pollard (Y3)</b> will take us through his experience of this years Undergraduate Research Volunteer Opportunities Scheme (URVOS) and its benefits, as well as showing some demo's from other people who took part.</p>
+    </div>
+  </div>
+   <div class="container left">
+    <div class="contentBox">
       <h2>16:30 - 17:00</h2>
       <h2>Azure Challenge Walkthrough</h2>
       <p><b>Garry Clawson (Y3)</b> takes us on a walkthrough of taking part in the Azure Challenge with Callum Thompson (Y3) and share their Azure concept implementation and how it worked in the Azure environment.</p>
