--- a/showcase.html
+++ b/showcase.html
@@ -97,7 +97,7 @@
     <div class="contentBox">
       <h2>13:30 - 14:00</h2>
       <h2>LaTeX Walkthrough</h2>
-      <p><b>Matthew Rimmer (Y3)</b> take us on a journey of using LaTeX in real life University reports, sharing the ins, outs, and nuances of the LaTeX environment.</p>
+      <p><b>Matthew Rimmer (Y3)</b> takes us on a journey of using LaTeX in real life University reports, sharing the ins, outs, and nuances of the LaTeX environment.</p>
     </div>
   </div>
   <div class="container left">
@@ -111,7 +111,7 @@
     <div class="contentBox">
       <h2>15:00 - 15:30</h2>
       <h2>IoT Walkthrough</h2>
-      <p><b>Joseph Pitts (Y3)</b> take us on a tour of developing cool IoT applications using C++, the cloud and the MxChip.</p>
+      <p><b>Joseph Pitts (Y3)</b> takes us on a tour of developing cool IoT applications using C++, the cloud and the MxChip.</p>
     </div>
   </div>
     <div class="container left">
