Added gamejam page

--- a/GameJam.html
+++ b/GameJam.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>SoCS Showcase 2020</title>
+<title>SoCS Freshers 2020</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -45,54 +45,27 @@
 
   <!-- How the team fits together Section -->
   <div class="w3-container w3-padding-32 max-width">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 textcenter">About SoCS Showcase 2020</h3>
-    <p>This Enhancement Week you will be stuck for things not to do rather than for things to do! With the great diversity of students across the SoCS we have decided to bring all of that together and hold the first SoCS Showcase event, designed by students and presented by students. We will be holding a full series of 'show and tell' style presentations as well as following that up with a full series of seminars. We then have the first SoCS memejam, so don't be afraid to show us what you can do! For information about any of the activities please follow the links below or contact us through our community links! We look forward to seeing you at our events!
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 textcenter">Game Jam</h3>
+    <p>If you have ever wondered what a Game Jam is or even thought about taking part then there is not better opportunity than now! Everyone is welcome and you will find a warm and friendly group of people to help you along and get you started. The theme and modifiers will be released on the day so keep your eyes out! Come join us!
     </p>
-  </div>
 
-
-  <div class="w3-row-padding max-width" style="text-align: center;">
-
-
-    <div class="w3-col l4 m4 w3-margin-bottom" style="line-height:1.5;">
-      <img src="assets/showandtell.png" class="center" id="student" style="width:75%;">
-      <p><b>Thursday 12th November 2020</b></p>
-       <p><b>11:30 AM</b></p>
-      <a href="showcase.html" class="w3-button email-button w3-blue w3-block"><b>SoCS Showcase</b></a>
-    </div>
-
-    
-    <div class="w3-col l4 m4 w3-margin-bottom" style="line-height:1.5;">
-      <img src="assets/memejam.jpg" class="center" id="student" style="width:75%;">
-      <p><b>Wednesday 11th November 2020</b></p>
-      <p><b>4:30 PM</b></p>
-      <a href="memejam.html" class="w3-button email-button w3-blue w3-block"><b>MemeJam (24 hours)</b></a>
-    </div>
-
-     <div class="w3-col l4 m4 w3-margin-bottom" style="line-height:1.5;">
-      <img src="assets/gamejam.jpg" class="center" id="student" style="width:75%;;">
-      <p><b>Saturday 7th November 2020</b></p>
-      <p><b>TBC</b></p>
-      <a href="GameJam.html" class="w3-button email-button w3-blue w3-block"><b>GameJam (48 hours)</b></a>
-    </div>
-
-
-<!--
-    <div class="w3-col l4 m6 w3-margin-bottom" style="line-height:1.5;">
-      <img src="assets/Twitch.png" class="center" id="student" style="width:350px; height: 350px;">
-      <p><b>Thursday 12th November 2020</b></p>
-      <p><b>6:00 PM</b></p>
-      <a href="TwitchStream.html" class="w3-button email-button w3-blue w3-block"><b>Q&A With Chris & Friends</b></a>
-    </div>
--->
+  <img src="assets/gamejam.gif" class="image" alt="test" style="width:100%"></img>
 
   </div>
 
+ <!-- Instructions -->
+  <div class="w3-container w3-padding-32 max-width" id="help">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 textcenter">Instructions</h3>
 
-
+    <ol>
+      <li>Registration on itch.io is required to take part</li>
+      <li>Everyone is welcome to take part</li>
+      <li>You can work on your own or as a team</li>
+      <li>Further information is available on the link below on the day of the event</li>
+    </ol> 
   </div>
 
-
+      <a href="" class="w3-button enter-button w3-blue w3-block" target="_blank"><b>itch.io Link</b></a>
 
 
   <!-- How the team fits together Section -->
@@ -111,32 +84,32 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 textcenter">Community</h3>
 
 
-	<div class="w3-row-padding max-width" style="text-align: center;">
+  <div class="w3-row-padding max-width" style="text-align: center;">
 
-	    <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
-	      <a href="https://socsreps.github.io" target="_blank"></span><img src="assets/link-icon.png" class="center" id="student" style="width:75%;">
-	      <p style="font-size: 14px;"><b>SoCS Reps</b></p></a>
-	    </div>
-	    <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
-	      <a href="https://discord.io/UoLCSS" target="_blank"><img src="assets/discord-icon.jpg" class="center" id="student" style="width:75%;">
-	      <p style="font-size: 14px;"><b>CSS Discord</b></p></a>
-	    </div>
+      <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
+        <a href="https://socsreps.github.io" target="_blank"></span><img src="assets/link-icon.png" class="center" id="student" style="width:75%;">
+        <p style="font-size: 14px;"><b>SoCS Reps</b></p></a>
+      </div>
+      <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
+        <a href="https://discord.io/UoLCSS" target="_blank"><img src="assets/discord-icon.jpg" class="center" id="student" style="width:75%;">
+        <p style="font-size: 14px;"><b>CSS Discord</b></p></a>
+      </div>
       <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
         <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank"><img src="assets/teams-icon.jpg" class="center" id="student" style="width:75%;">
         <p style="font-size: 14px;"><b>MS Teams</b></p></a>
       </div>
-	    <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
-	      <a href="https://www.facebook.com/computingsociety/" target="_blank"><img src="assets/facebook-icon.png" class="center" id="student" style="width:75%;">
-	      <p style="font-size: 14px;"><b>CS Society</b></p></a>
-	    </div>
-	      <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
-	      <a href="https://twitter.com/UoLGameDev" target="_blank"><img src="assets/twitter-icon.png" class="center" id="student" style="width:75%;">
-	          <p style="font-size: 14px;"><b>UoLGameDev</b></p></a>
-	    </div>
-	    <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
-	      <a href="https://twitter.com/UoLComputing" target="_blank"><img src="assets/twitter-icon.png" class="center" id="student" style="width:75%;">
-	      <p style="font-size: 14px;"><b>UoLComputing</b></p></a>
-	    </div>
+      <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
+        <a href="https://www.facebook.com/computingsociety/" target="_blank"><img src="assets/facebook-icon.png" class="center" id="student" style="width:75%;">
+        <p style="font-size: 14px;"><b>CS Society</b></p></a>
+      </div>
+        <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
+        <a href="https://twitter.com/UoLGameDev" target="_blank"><img src="assets/twitter-icon.png" class="center" id="student" style="width:75%;">
+            <p style="font-size: 14px;"><b>UoLGameDev</b></p></a>
+      </div>
+      <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
+        <a href="https://twitter.com/UoLComputing" target="_blank"><img src="assets/twitter-icon.png" class="center" id="student" style="width:75%;">
+        <p style="font-size: 14px;"><b>UoLComputing</b></p></a>
+      </div>
         <div class="w3-col l1 m4 s4 w3-margin-bottom" style="line-height:1.5;">
         <a href="https://twitter.com/UoL_SoCS" target="_blank"><img src="assets/twitter-icon.png" class="center" id="student" style="width:75%;">
         <p style="font-size: 14px;"><b>UoL_SoCS</b></p></a>
@@ -144,7 +117,7 @@
 
 
 
-	  </div>
+    </div>
 
   </div>
 
@@ -182,7 +155,6 @@ $('.hasTooltip').hover(function() {
 }, function() {
     $(this).next('span').fadeOut(200);
 });
-
 
 
 
