Updated Gamejam items

--- a/GameJam.html
+++ b/GameJam.html
@@ -65,7 +65,7 @@
     </ol> 
   </div>
 
-      <a href="" class="w3-button enter-button w3-blue w3-block" target="_blank"><b>itch.io Link</b></a>
+      <a href="https://itch.io/" class="w3-button enter-button w3-blue w3-block" target="_blank"><b>itch.io Link</b></a>
 
 
   <!-- How the team fits together Section -->
