Updated talk links

--- a/showcase.html
+++ b/showcase.html
@@ -50,16 +50,8 @@
   <!-- How the team fits together Section -->
   <div class="w3-container w3-padding-32 max-width">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 textcenter">Showcase Overview</h3>
-    <p>The Showcase presentations and walk through's have been created by students for students. We know that many students do lots of extra-curricular projects and there are not many places to demonstrate these or show them off to peers. We wanted to change that and provide an opportunity to share, present and exchange ideas! All talks will be hosted on Teams using the SoCS Common room. You can join any of the talks by using the 'Link to Talks' button.The agenda is below and we hope you enjoy each of the talks!
+    <p>The Showcase presentations and walk through's have been created by students for students. We know that many students do lots of extra-curricular projects and there are not many places to demonstrate these or show them off to peers. We wanted to change that and provide an opportunity to share, present and exchange ideas! All talks will be hosted on Teams using the SoCS Common Room. The agenda is below and we hope you enjoy each of the talks!
     </p>
-
-
-
-
-  <!-- button that takes you to the teams site -->
-
-  <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talks</b></a>
-
 
 
   <!-- How the team fits together Section -->
@@ -75,6 +67,7 @@
       <h2>11:30 - 12:00</h2>
       <h2>GitHub Walkthrough</h2>
       <p><b>Brandon Dodds (Y2)</b> and <b>Ben Clarke (Y3)</b> take us through a GitHub walk through using the CLI and Destkop App respectively.</p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container right">
@@ -82,7 +75,7 @@
       <h2>12:30 - 13:00</h2>
       <h2>Anti-Cheat Walkthrough</h2>
       <p><b>Harry Riley (Y2)</b> takes us through an exploration into anti-cheat measures used in closed source systems.</p>
-    </p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
 
   </div>
@@ -91,6 +84,7 @@
       <h2>13:00 - 13:30</h2>
       <h2>CascadeBot Walkthrough</h2>
       <p><b>William Oldham (Y2)</b> takes us through CascadeBot, a open source Discord bot project that has everything you need to manage and moderate your Discord server.</p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container right">
@@ -98,6 +92,7 @@
       <h2>13:30 - 14:00</h2>
       <h2>LaTeX Walkthrough</h2>
       <p><b>Matthew Rimmer (Y3)</b> takes us on a journey of using LaTeX in real life University reports, sharing the ins, outs, and nuances of the LaTeX environment.</p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container left">
@@ -105,6 +100,7 @@
       <h2>14:00 - 14:30</h2>
       <h2>Didactic.App Walkthrough</h2>
       <p><b>Luke Heald (Y2)</b> takes us on his journey of developing Didactic.App, a tool to help students find peer tutors for any subject from across the university.</p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container right">
@@ -112,6 +108,7 @@
       <h2>15:00 - 15:30</h2>
       <h2>IoT Walkthrough</h2>
       <p><b>Joseph Pitts (Y3)</b> takes us on a tour of developing cool IoT applications using C++, the cloud and the MxChip.</p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
     <div class="container left">
@@ -119,6 +116,7 @@
       <h2>15:30 - 16:00</h2>
       <h2>Docker Walkthrough</h2>
       <p><b>George Onoufriou </b> takes us on a tour of the wonderful world of Docker, how it is useful and some example real life applications.</p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container right">
@@ -126,6 +124,7 @@
       <h2>16:00 - 16:30</h2>
       <h2>URVOS Showcase</h2>
       <p><b>Harry Pollard (Y3)</b> will take us through his experience of this years Undergraduate Research Volunteer Opportunities Scheme (URVOS) and its benefits, as well as showing some demo's from other people who took part.</p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
    <div class="container left">
@@ -133,6 +132,7 @@
       <h2>16:30 - 17:00</h2>
       <h2>Azure Challenge Walkthrough</h2>
       <p><b>Garry Clawson (Y3)</b> takes us on a walkthrough of taking part in the Azure Challenge with Callum Thompson (Y3) and share their Azure concept implementation and how it worked in the Azure environment.</p>
+       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
 </div>
