--- a/GameJam.html
+++ b/GameJam.html
@@ -46,7 +46,7 @@
   <!-- How the team fits together Section -->
   <div class="w3-container w3-padding-32 max-width">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 textcenter">Game Jam</h3>
-    <p>If you have ever wondered what a Game Jam is or even thought about taking part then there is not better opportunity than now! Everyone is welcome and you will find a warm and friendly group of people to help you along and get you started. The theme and modifiers will be released on the day so keep your eyes out! Come join us!
+    <p>If you have ever wondered what a Game Jam is or even thought about taking part then there is not better opportunity than now! Everyone is welcome and you will find a warm and friendly group of people to help you along and get you started. The theme and modifiers will be released on the day so keep your eyes out! There will be a prize for all members of the teams that win the community vote or committee favourite. Come join us!
     </p>
 
   <img src="assets/gamejam.gif" class="image" alt="test" style="width:100%"></img>
@@ -65,7 +65,7 @@
     </ol> 
   </div>
 
-      <a href="https://itch.io/" class="w3-button enter-button w3-blue w3-block" target="_blank"><b>itch.io Link</b></a>
+      <a href="https://itch.io/jam/uol-bonfire-jam" class="w3-button enter-button w3-blue w3-block" target="_blank"><b>itch.io Link</b></a>
 
 
   <!-- How the team fits together Section -->
