--- a/showcase.html
+++ b/showcase.html
@@ -67,7 +67,7 @@
       <h2>11:30 - 12:00</h2>
       <h2>GitHub Walkthrough</h2>
       <p><b>Brandon Dodds (Y2)</b> and <b>Ben Clarke (Y3)</b> take us through a GitHub walk through using the CLI and Destkop App respectively.</p>
-       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://lncn.ac/socsew1e28" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container right">
@@ -75,7 +75,7 @@
       <h2>12:30 - 13:00</h2>
       <h2>Anti-Cheat Walkthrough</h2>
       <p><b>Harry Riley (Y2)</b> takes us through an exploration into anti-cheat measures used in closed source systems.</p>
-       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033012351?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
 
   </div>
@@ -84,7 +84,7 @@
       <h2>13:00 - 13:30</h2>
       <h2>CascadeBot Walkthrough</h2>
       <p><b>William Oldham (Y2)</b> takes us through CascadeBot, a open source Discord bot project that has everything you need to manage and moderate your Discord server.</p>
-       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033051710?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container right">
@@ -92,7 +92,7 @@
       <h2>13:30 - 14:00</h2>
       <h2>LaTeX Walkthrough</h2>
       <p><b>Matthew Rimmer (Y3)</b> takes us on a journey of using LaTeX in real life University reports, sharing the ins, outs, and nuances of the LaTeX environment.</p>
-       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033081863?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container left">
@@ -108,7 +108,7 @@
       <h2>15:00 - 15:30</h2>
       <h2>IoT Walkthrough</h2>
       <p><b>Joseph Pitts (Y3)</b> takes us on a tour of developing cool IoT applications using C++, the cloud and the MxChip.</p>
-       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033123858?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
     <div class="container left">
@@ -116,7 +116,7 @@
       <h2>15:30 - 16:00</h2>
       <h2>Docker Walkthrough</h2>
       <p><b>George Onoufriou </b> takes us on a tour of the wonderful world of Docker, how it is useful and some example real life applications.</p>
-       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033176075?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container right">
@@ -124,7 +124,7 @@
       <h2>16:00 - 16:30</h2>
       <h2>URVOS Showcase</h2>
       <p><b>Harry Pollard (Y3)</b> will take us through his experience of this years Undergraduate Research Volunteer Opportunities Scheme (URVOS) and its benefits, as well as showing some demo's from other people who took part.</p>
-       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033201340?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
    <div class="container left">
@@ -132,7 +132,7 @@
       <h2>16:30 - 17:00</h2>
       <h2>Azure Challenge Walkthrough</h2>
       <p><b>Garry Clawson (Y3)</b> takes us on a walkthrough of taking part in the Azure Challenge with Callum Thompson (Y3) and share their Azure concept implementation and how it worked in the Azure environment.</p>
-       <a href="https://teams.microsoft.com/l/channel/19%3aadb7dac904bd4aa290eab01b59dde4a4%40thread.tacv2/General?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033226614?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
 </div>
