--- a/showcase.html
+++ b/showcase.html
@@ -106,7 +106,7 @@
   <div class="container right">
     <div class="contentBox">
       <h2>15:00 - 15:30</h2>
-      <h2>IoT Walkthrough</h2>
+      <h2>IoT Showcase</h2>
       <p><b>Joseph Pitts (Y3)</b> takes us on a tour of developing cool IoT applications using C++, the cloud and the MxChip.</p>
        <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033123858?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
