--- a/showcase.html
+++ b/showcase.html
@@ -108,7 +108,7 @@
       <h2>15:00 - 15:30</h2>
       <h2>IoT Showcase</h2>
       <p><b>Joseph Pitts (Y3)</b> takes us on a tour of developing cool IoT applications using C++, the cloud and the MxChip.</p>
-       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033151709?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/channel/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/SoCS%2520Showcase?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
     <div class="container left">
@@ -116,7 +116,7 @@
       <h2>15:30 - 16:00</h2>
       <h2>Docker Walkthrough</h2>
       <p><b>George Onoufriou </b> takes us on a tour of the wonderful world of Docker, how it is useful and some example real life applications.</p>
-       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033176075?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/channel/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/SoCS%2520Showcase?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
   <div class="container right">
@@ -124,7 +124,7 @@
       <h2>16:00 - 16:30</h2>
       <h2>URVOS Showcase</h2>
       <p><b>Harry Pollard (Y3)</b> will take us through his experience of this years Undergraduate Research Volunteer Opportunities Scheme (URVOS) and its benefits, as well as showing some demo's from other people who took part.</p>
-       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033201340?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/channel/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/SoCS%2520Showcase?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
    <div class="container left">
@@ -132,7 +132,7 @@
       <h2>16:30 - 17:00</h2>
       <h2>Azure Challenge Walkthrough</h2>
       <p><b>Garry Clawson (Y3)</b> takes us on a walkthrough of taking part in the Azure Challenge with Callum Thompson (Y3) and share their Azure concept implementation and how it worked in the Azure environment.</p>
-       <a href="https://teams.microsoft.com/l/meetup-join/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/1605033226614?context=%7b%22Tid%22%3a%22952e47c4-05de-4282-83af-5f4b46b1628f%22%2c%22Oid%22%3a%22cf8e6eae-8cde-4a17-8ecb-45466fa3cd48%22%7d" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
+       <a href="https://teams.microsoft.com/l/channel/19%3a7e0ba72575124104a56949ce36d1ff92%40thread.tacv2/SoCS%2520Showcase?groupId=88768879-8ff4-423e-9c3e-6383051081a3&tenantId=952e47c4-05de-4282-83af-5f4b46b1628f" target="_blank" class="w3-button enter-button w3-blue w3-block"><b>Link To Talk</b></a>
     </div>
   </div>
 </div>
